--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Trav Bud</string>
+    <string name="app_name">Coursify</string>
     <string name="facebook_app_id">580829693935158</string>
     <string name="facebook_client_token">d07a5189d13ba3c2abb7e6a8b94bf6a4</string>
 </resources>
